--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ footer{
     align-items: center;
 }
 
-ul > li{
+ul > li.item{
     color: black;
 }
 
@@ -76,6 +76,11 @@ ul > li{
 .hdr{
     text-decoration: none;
     color: black;
+}
+
+.hdr-white{
+    text-decoration: none;
+    color: white;
 }
 
 .btn{
@@ -137,14 +142,14 @@ ul > li{
 
 .containerPlan{
     width: calc(100% / 3);
-    border: black 1px solid;
+    border: gray 1px solid;
     margin-right: 40px;
 }
 
 .team{
     width: 50%;
     margin: 0 auto;
-    border: black 1px solid;
+    border: gray 1px solid;
     margin-top: 50px;
 }
 
@@ -162,6 +167,11 @@ h1{
 h2{
     font-size: 40px;
     margin: 90px 0 60px 0;
+}
+
+h2.business{
+    margin: 0;
+    font-size: 35px;
 }
 
 h5{
@@ -185,9 +195,21 @@ button{
     width: 80%;
 }
 
-.dot{
-    padding-right: 20px;
+.radio{
+    border: 5px solid var(--primary-color);
+    background-color: white;
+    height: 1.25em;
+    width: 1.25em;
+    display: inline-block;
+    border-radius: 50%;
+    vertical-align: middle;
 }
+
+.radio-label{
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
 .single{
     text-align: center;
     padding: 5px 0;
@@ -223,6 +245,7 @@ button{
 
 .prf-cnt{
     padding: 10px 0;
+    text-indent: -10px;
 }
 
 .fa-arrow-down{
@@ -232,6 +255,7 @@ button{
 
 .fa-user, .fa-folder, .fa-share-nodes, .fa-check{
     padding-right: 5px;
+    margin-left: 20px;
 }
 
 .short{
@@ -252,10 +276,6 @@ button{
     color: var(--primary-color);
 }
 
-#partner{
-    width: 50%;
-}
-
 .containerSmall{
     width: 50%;
     margin: 0 auto;
@@ -264,7 +284,34 @@ button{
     justify-content: space-between;
 }
 
-#change-img{
+.containerSmall2{
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 150px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.containerSmall3{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.containerSmall4{
+    width: 50%;
+    margin: 0 auto;
+}
+
+.containerSmart{
+    width: 65%;
+    padding: 50px 0;
+    display: flex;
+}
+
+.change-img{
     width: 90%;
 }
 
@@ -276,3 +323,192 @@ button{
     color: black;
     border: black 1px solid;
 }
+
+.container-bsn{
+    margin-top: 40px;
+    width: calc(100% / 3);
+}
+
+.card{
+    padding: 10px 10px 0 0;
+    margin-right: 20px;
+}
+
+.mt{
+    margin-top: 40px;
+}
+
+
+a:visited.visto{
+    color: blue;
+}
+
+.containerBig{
+    width: 100%;
+    margin-top: 100px;
+}
+
+.containerBig2{
+    width: 100%;
+    background-color: rgb(204, 230, 255);
+    height: 300px;
+}
+
+.containerBig3{
+    width: 100%;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.container-cst{
+    display: flex;
+}
+
+.first-square{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.second-square{
+    width: 100%;
+    padding: 50px;
+    background-color: lightgray;
+}
+
+.design{
+    width: 50%;
+    height: 258.6px;
+    background-color: rgb(204, 255, 204);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arizona{
+    width: 50%;
+    height: 50%;
+    background-color: rgb(102, 0, 51);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.florida{
+    width: 50%;
+    height: 258.6px;
+    background-color: rgb(77, 184, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topps{
+    width: 50%;
+    height: 258.6px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bicycle{
+    width: 50%;
+    height: 258.6px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hearts{
+    width: 50%;
+    height: 258.6px;
+    background-color: rgb(204, 230, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.planet{
+    width: 50%;
+    height: 258.6px;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.channel{
+    width: 50%;
+    height: 258.6px;
+    background-color: rgb(255, 255, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-square{
+    width: 50%;
+}
+
+.img-des{
+    width: 40%;
+}
+
+#person{
+    margin-top: 30px;
+}
+
+#dpb{
+    color: rgb(102, 0, 51);
+}
+
+#trial-btn{
+    background-color: white;
+    color: black;
+    margin-left: 80px;
+}
+
+.faq-space{
+    margin: 20px 0;
+}
+.faq-content{
+    display: inline-block;
+}
+
+.fa-chevron-down{
+    margin-left: 400px;
+}
+
+.list-white{
+    color: white;
+}
+
+.col{
+    width: calc(100% / 5);
+    margin: 40px 30px 0 0;
+}
+
+.foot-content{
+    margin-bottom: 20px;
+}
+
+.foot-item{
+    list-style-type: none;
+    padding: 5px 0;
+    font-size: 15px;
+
+}
+
+.mybss{
+    width: 67%;
+}
+
+.free-trial{
+    width: 33%;
+}
+
